<resources>

    <string name="app_name">Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="open_brk">(</string>
    <string name="close_brk">)</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">x</string>
    <string name="div">/</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="sin">sin </string>

    <string name="e">e   </string>
    <string name="deg">deg   </string>
    <string name="pi">\u03C0   </string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in_text">Log in to your existing account of Q Allur</string>
    <string name="hint_email">aliahmad3937@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">log in</string>
    <string name="or_connect_using">Or connect using</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

</resources>