<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".loginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@color/bg_color"

        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_20"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_mobile"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome_back"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_30"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/light_dark"
                    android:text="@string/log_in_text"
                    android:textSize="@dimen/text_size_16" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_outline"
                    android:ems="10"
                    android:layout_marginTop="@dimen/size_30"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="@dimen/size_10"
                    android:textColorHint="@color/blue"
                    android:padding="@dimen/size_10"
                    android:paddingLeft="@dimen/size_10" />

                <EditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_pass"
                    android:ems="10"
                    android:layout_marginTop="@dimen/size_10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawablePadding="@dimen/size_10"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableTint="#c1c1c1"
                    android:padding="@dimen/size_10"
                    android:paddingLeft="@dimen/size_10" />

                <TextView
                    android:id="@+id/tv_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/light_dark"
                    android:text="@string/forgot_password"
                    android:textSize="@dimen/text_size_20" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/bg_btn_login"
                    android:padding="@dimen/size_15"
                    android:layout_marginTop="@dimen/size_15"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/size_20"
                    android:textColor="@color/light_dark"
                    android:text="@string/or_connect_using" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/size_10"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_fb"
                        android:drawableLeft="@drawable/facebook"
                        android:drawablePadding="@dimen/size_10"
                        android:paddingLeft="@dimen/size_20"
                        android:paddingRight="@dimen/size_20"
                        android:text="@string/facebook"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/size_10"
                        android:background="@drawable/bg_google"
                        android:drawableLeft="@drawable/google"
                        android:drawablePadding="@dimen/size_10"
                        android:drawableTint="@color/white"
                        android:paddingLeft="@dimen/size_20"
                        android:paddingRight="@dimen/size_20"
                        android:text="@string/google"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/size_20"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_dark"
                        android:text="@string/don_t_have_an_account" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:text="@string/sign_up" />


                </LinearLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:onClick="firstActivity"
        app:backgroundTint="@color/blue"
        app:srcCompat="@drawable/ic_arrow_back"
        tools:ignore="VectorDrawableCompat" />
</RelativeLayout>